--- a/Assets/Scripts/Core/Cards/Cards.SlayTheSpire.asmdef
+++ b/Assets/Scripts/Core/Cards/Cards.SlayTheSpire.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Cards",
+    "name": "Cards.SlayTheSpire",
     "rootNamespace": "",
     "references": [
         "GUID:54d979557f948794bbdb757b777997f8",
