划分Card.SlayTheSpire程序集

--- a/Assets/Scripts/Cards/Cards.asmdef
+++ b/Assets/Scripts/Cards/Cards.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Cards.SlayTheSpire",
+    "name": "Cards",
     "rootNamespace": "",
     "references": [
         "GUID:54d979557f948794bbdb757b777997f8",
