--- a/Assets/Scripts/Core/Core.asmdef
+++ b/Assets/Scripts/Core/Core.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Core",
-    "rootNamespace": "Classes",
+    "rootNamespace": "",
     "references": [
         "GUID:54d979557f948794bbdb757b777997f8"
     ],
