--- a/Assets/Scripts/Systems/TurnSystem/System.TurnSystem.asmdef
+++ b/Assets/Scripts/Systems/TurnSystem/System.TurnSystem.asmdef
@@ -1,11 +1,11 @@
-{
-  "name": "Manager",
+﻿{
+  "name": "System.TurnSystem",
   "rootNamespace": "",
   "references": [
     "GUID:54d979557f948794bbdb757b777997f8",
     "GUID:9b3c106950ad24d41a2be1007f026926",
     "GUID:6b0320be07c747a4b1ce09cc1e96adc4",
-    "GUID:94e9eb02a3184f7c94903cc770b6a29b"
+    "GUID:6055be8ebefd69e48b49212b09b47b2f"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
