--- a/Assets/Scripts/Systems/TurnSystem/System.TurnSystem.asmdef
+++ b/Assets/Scripts/Systems/TurnSystem/System.TurnSystem.asmdef
@@ -5,7 +5,8 @@
     "GUID:54d979557f948794bbdb757b777997f8",
     "GUID:9b3c106950ad24d41a2be1007f026926",
     "GUID:6b0320be07c747a4b1ce09cc1e96adc4",
-    "GUID:6055be8ebefd69e48b49212b09b47b2f"
+    "GUID:6055be8ebefd69e48b49212b09b47b2f",
+    "GUID:2e5ca192620a6c94eb67d149d88b2a9a"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
