--- a/Assets/Scripts/Game/Powers/Powers.asmdef
+++ b/Assets/Scripts/Game/Powers/Powers.asmdef
@@ -1,4 +1,8 @@
 ﻿{
   "name": "Powers",
-  "references":[ "GUID:54d979557f948794bbdb757b777997f8", "GUID:9b3c106950ad24d41a2be1007f026926" ]
+  "references": [
+    "GUID:54d979557f948794bbdb757b777997f8",
+    "GUID:2e5ca192620a6c94eb67d149d88b2a9a",
+    "GUID:9b3c106950ad24d41a2be1007f026926"
+  ]
 }
